# CanSimulatorWithSniffer

./: .clang-Format  .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  POLICYS.md  README.md  docker-compose.yml
.github/workflows/: cicd.yml
include/: canTypes.c  canTypes.h  greeting.h  oledi2c.c  oledi2c.h
src/: CMakeLists.txt  canClient.c  canSniffer.c  candump.c  cansend.c  greeting.cpp  i2c_slave_unit.c  main.c  main.cpp
tests/: CMakeLists.txt  initialTest.cpp
